harbor/harbor-pvc-pv.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: glusterfs-harbor-harbor
  namespace: harbor
subsets:
- addresses:
  - ip: 10.235.9.42
  - ip: 10.235.9.43
  - ip: 10.235.9.44
  ports:
  - port: 49152
    protocol: TCP
